--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,9 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>service-provider</module>
-        <module>service-consumer</module>
         <module>sercvice-api</module>
         <module>spring-dubbo</module>
+        <module>springboot-dubbo</module>
     </modules>
 
 
@@ -39,7 +38,14 @@
                 <artifactId>curator-framework</artifactId>
                 <version>2.12.0</version>
             </dependency>
+            <!--springboot-web-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>1.5.21.RELEASE</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
